<?xml version="1.0"?>
<package format="2">
  <name>ORB_SLAM2</name>
  <version>0.0.0</version>
  <description>

     ORB_SLAM2

  </description>
  <maintainer email="root@todo.todo">Raul Mur-Artal</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pepper_obj_msgs</build_depend>

  <build_export_depend>tf</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>pepper_obj_msgs</build_export_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pepper_obj_msgs</exec_depend>

  <export></export>

</package>
